--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "yarn prettier --write ."
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
@@ -14,6 +15,7 @@
     "@mui/material": "^5.15.10",
     "classnames": "^2.5.1",
     "next": "14.1.0",
+    "prettier": "^3.2.5",
     "react": "^18",
     "react-dom": "^18"
   },
